--- a/models/raw/raw_nwt.yml
+++ b/models/raw/raw_nwt.yml
@@ -1,21 +1,11 @@
-
 version: 2
 
-models:
-  - name: my_first_dbt_model
-    description: "A starter dbt model"
-    columns:
-      - name: id
-        description: "The primary key for this table"
-        tests:
-          - unique
-          - not_null
-
-  - name: my_second_dbt_model
-    description: "A starter dbt model"
-    columns:
-      - name: id
-        description: "The primary key for this table"
-        tests:
-          - unique
-          - not_null
+sources:
+  - name: NWT
+    description: 'Description of the CUSTOMER source'
+    tables:
+      - name: CUSTOMER
+        description: 'Description of the CUSTOMER table'
+    config:
+      database: 'ASGGGGGGGG'
+      
