added incremental model for raw_orders and raw_order_details

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -38,3 +38,9 @@ models:
       +materialized: view
     reporting:
       +materialized: table
+    ORDERS_FRESH:
+      +materialized: table
+      unique_key: ORDERID
+    ORDER_DETAILS_FRESH:
+      +materialized: table
+      unique_key: ORDERID
