orderdetail_fresh wasnt corresponded with NWT

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -41,6 +41,6 @@ models:
     ORDER_FRESH:
       +materialized: table
       unique_key: ORDERID
-    ORDER_DETAIL_FRESH:
+    ORDERDETAIL_FRESH:
       +materialized: table
       unique_key: ORDERID
